--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-Click==7.0
+atomicwrites==1.2.1
+attrs==18.2.0
+more-itertools==4.3.0
+pluggy==0.8.0
+py==1.7.0
+pyparsing==2.3.0
+pytest==4.0.1
+six==1.11.0
+svgwrite==1.2.1
